# ObserverManager

./: README.md
Pratice_Obsever/: CMakeLists.txt
Pratice_Obsever/src/: main.cpp
Pratice_Obsever/src/observermanager/: datasource.hpp  iobserver.hpp  nonbufferingcapturesource.hpp  observermanager.hpp  pollingthread.hpp  viewerutil.hpp
